# protected_fs_rs

./: .drone.yml  .gitignore  .travis.yml  Cargo.toml  README.md  build.rs
protected_fs_c/: CMakeLists.txt
protected_fs_c/sgx_tprotected_fs/: protected_fs_nodes.h
sgx/protected_fs-sgx-test/enclave/: Cargo.toml
sgx/protected_fs-sgx-test/enclave/src/: tests.rs
sgx/protected_fs-sgx_test/enclave/: Makefile
sgx/protected_fs-sgx_test/enclave/src/: lib.rs  tests.rs
src/: lib.rs  protected_fs.rs  sgx_fs_inner.rs  sgx_tprotected_fs.rs
tests/: large_file.rs
